--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Karla:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");
 
 body {
   margin: 0;
@@ -10,7 +10,9 @@ body {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
-
+.font-karla {
+  font-family: "Karla", sans-serif;
+}
 /* Modify the scrollbar */
 /* For WebKit-based browsers */
 /* Width and height of the scrollbar */
