--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,12 @@ body {
   box-shadow: 0px 33px 32px -16px rgba(0, 0, 0, 0.1),
     0px 0px 16px 4px rgba(0, 0, 0, 0.04);
 }
+
+.green-links a {
+  color: #4DC601;
+  text-decoration: underline;
+}
+
+.green-links a:hover {
+  color: #3fdd78;
+}
